# Triangles

./: CMakeLists.txt  README.md  algorithm.cpp  smoke_example.txt  triangles.cpp  triangles.hpp  trianglestest.cpp
include/: algorithm.cpp  bvh.hpp  generate_tests.cpp  generate_tests.hpp  triangles.hpp  trianglestest.cpp  utils.cpp  utils.hpp
tests/: 16000_in_16000_intersections.txt  2000_in_2000_intersections.txt
